# ade-bench

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CLI.md  CONTRIBUTING.md  README.md  profiling.md  pyproject.toml  test_dbt_parser.py
.github/workflows/: ci.yml
ade_bench/: __init__.py  config.py  harness.py  harness_models.py
ade_bench/agents/: __init__.py  agent_factory.py  agent_name.py  base_agent.py  log_formatter.py  none_agent.py  oracle_agent.py  sage_agent.py
ade_bench/cli/: __init__.py  wizard.py
ade_bench/database/: __init__.py  pool_manager.py
ade_bench/handlers/: __init__.py  file_diff_handler.py  trial_handler.py
ade_bench/parsers/: __init__.py  base_parser.py  claude_parser.py  codex_parser.py  dbt_parser.py  gemini_parser.py  macro_parser.py  parser_factory.py  pytest_parser.py  sql_parser.py
ade_bench/plugins/: base_plugin.py  dbt_artifacts.py  dbt_mcp.py  registry.py  superpowers.py
ade_bench/setup/: __init__.py  agent_setup.py  base_setup.py  dbt_setup.py  duckdb_setup.py  migration_setup.py  setup_orchestrator.py  setup_utils.py  snowflake_setup.py
ade_bench/terminal/: __init__.py  docker_compose_manager.py  terminal.py  tmux_session.py
ade_bench/utils/: __init__.py  dataset.py  debug_breakpoint.py  env_model.py  logger.py  results_writer.py  test_generator.py  timeout_manager.py
datasets/: ade-bench-core.yaml
dev/sandbox/: .user.yml
docker/agents/: Dockerfile
docs/: CLI.md  CONTRIBUTING.md
experiment_sets/: coalesce.yaml  demo.yaml  fast.yaml  webinar.yaml
profiling/: README.md
scripts_bash/: run_example.sh  start-full-profiling-session.sh  start_full_profiling_session.sh  start_profiling_session.sh
scripts_python/: README_duckdb_converter.md  README_snowflake_setup.md  analyze.py  convert_duckdb_to_postgres.py  create_sandbox.py  display_results.py  duckdb_utils.py  extract_task_details.py  generate_db_from_profiling_summaries.py  generate_function_charts_from_db.py  generate_results_html.py  init_task.py  migrate_duckdb_to_postgres.py  migrate_duckdb_to_snowflake.py  profiling_statistics.py  render_file_diffs.py  run_harness.py  save_results.py  setup_snowflake_task.py  summarize_latest_experiment.py  summarize_results.py  update_task_tags.py  utils.py  view_logs.py  view_results.py  view_summary.py
templates/: detail.html  summary.html
tests/: test_trial_handler.py
(+795 files in other folders)
